syntax = "proto3";

package todoService;
option go_package = "/services";

service todo{
  rpc CreateToDo(CreateRequest) returns (CreateResponse);
  rpc UpdateToDo(UpdateRequest) returns (UpdateResponse);
  rpc DeleteToDo(DeleteRequest) returns (DeleteResponse);
  rpc GetToDoById(GetByIdRequest) returns (GetByIdResponse);
  rpc GetAllToDo(GetAllRequest) returns (GetAllResponse);
  rpc MarkAsDone(MarkAsDoneRequest) returns (MarkAsDoneResponse);
}

message ToDo{
  int64 id = 1;
  string name = 2;
  string description = 3;
  bool status = 4;
}

message CreateRequest{
  int64 id = 1;
  string name = 2;
  string description = 3;
  bool status = 4;
}

message CreateResponse{
  int64 id = 1;
  string name = 2;
  string description = 3;
  bool status = 4;
}

message UpdateRequest{
  int64 id = 1;
  string name = 2;
  string description = 3;
}

message UpdateResponse{
  int64 id = 1;
  string name = 2;
  string description = 3;
  bool status = 4;
}

message DeleteRequest{
  int64 id = 1;
}

message DeleteResponse{
  string message = 1;
}

message GetByIdRequest{
  int64 id = 1;
}

message GetByIdResponse{
  int64 id = 1;
  string name = 2;
  string description = 3;
  bool status = 4;
}

message GetAllRequest{
}

message GetAllResponse{
  repeated ToDo todo = 1;
}

message MarkAsDoneRequest{
  int64 id = 1;
}

message MarkAsDoneResponse{
  int64 id = 1;
  string name = 2;
  string description = 3;
  bool status = 4;
}